--- a/src/collated/A0133949U.md
+++ b/src/collated/A0133949U.md
@@ -3,15 +3,13 @@
 ``` java
 package logic.command;
 
-import java.util.ArrayList;
-
 import logic.Command;
 import logic.CommandType;
 import logic.Manager;
 import logic.Task;
 import parser.CommandPackage;
 
-public class AddCommand extends Command{
+public class AddCommand extends Command {
 	CommandType ct;
 	Manager mgr;
 	CommandPackage commandInfo;
@@ -25,9 +23,10 @@ public class AddCommand extends Command{
 	}
 
 	@Override
-	public String execute() {
+	public String execute() throws InvalidCommandException{
 		
 		Task task = new Task(commandInfo.getPhrase());
+		
 		if (commandInfo.startingTime() != null) {
 			task.setStartTime(commandInfo.startingTime());
 		}
@@ -35,16 +34,23 @@ public class AddCommand extends Command{
 			task.setEndTime(commandInfo.endingTime());
 		}
 
-		if (commandInfo.getPriority() != null) {
+		if (commandInfo.getPriority() != null && commandInfo.getPriority() != "") {
 			String pri = commandInfo.getPriority().trim();
-			if (pri != null && pri != "") {
-				task.setPriority(pri);
+			
+			int priority = Integer.parseInt(pri);		
+			if(priority>3 || priority<=0){
+				throw new InvalidCommandException
+				("Invalid priority.Priority is valid from 1 to 3");
 			}
+			
+			task.setPriority(priority);
+			
 		}
-
+		//System.out.println("here");
+		
 		mgr.addToTaskList(task);
 
-		return "added";
+		return "Task Added: "+task.getName();
 	}
 
 }
@@ -53,12 +59,9 @@ public class AddCommand extends Command{
 ``` java
 package logic.command;
 
-import java.util.ArrayList;
-
 import logic.Command;
 import logic.CommandType;
 import logic.Manager;
-import parser.CommandPackage;
 
 public class ClearCommand extends Command{
 	CommandType ct;
@@ -76,7 +79,7 @@ public class ClearCommand extends Command{
 
 		mgr.clear();
 
-		return "all tasks cleared";
+		return "All tasks cleared";
 	}
 
 }
@@ -97,45 +100,115 @@ public class DeleteCommand extends Command{
 	CommandType ct;
 	Manager mgr;
 	String deleteInfo;
+	boolean inSearchStatus=false;
 
-	public DeleteCommand(CommandType ct,Manager manager,String deleteInfo) {
+	public DeleteCommand(CommandType ct,Manager manager,
+			String deleteInfo, boolean inSearchStatus) {
 		super(ct);
 		this.ct= ct;
 		this.mgr=manager;	
 		this.deleteInfo = deleteInfo;
+		this.inSearchStatus=inSearchStatus;
+		
 		
 	}
 
 	@Override
-	public String execute() {
-		int index=0;
-		boolean found = false;
-		ArrayList<Task> taskList = mgr.getTaskList();
-		Task t;
-		if (isInteger(deleteInfo, 10)) { // delete by index
-			index = Integer.parseInt(deleteInfo)-1;
-			if(index<taskList.size()  && index>=0){
-				found =true;
-				mgr.delete(index);		
-				return "task deleted";
-			}
-			
-		}  
-		// delete by name
+	public String execute() throws InvalidCommandException{
+		
+		if(inSearchStatus==false){ 
+			int index=0;
+			int searchIndex=-1;
+			boolean found = false;
+			ArrayList<Task> taskList = mgr.getTaskList();
+			Task t;
+			if (isInteger(deleteInfo, 10)) { // delete by index
+				index = Integer.parseInt(deleteInfo)-1;
+				if(index<taskList.size()  && index>=0){
+					found =true;
+					t= mgr.delete(index,searchIndex,false);		
+					return "Task deleted: "+t.getName();
+				}
+				
+			}  
+			// delete by name
 			for (int i = 0; i < taskList.size(); i++) {
 				t = taskList.get(i);
 				if (t.getName().equals(deleteInfo)) {
 					index=i;
-					found = false;
+					found = true;
 					break;
 				}
 			}
-		
-		if(found = false){
-			return "invalid command";
+			
+			if(found == false){
+				System.out.println("im here!!!!");
+				throw new InvalidCommandException("Task not found");
+			}
+			
+			t= mgr.delete(index,searchIndex,false);		
+			return "Task deleted: "+t.getName();
+			
+		}else{ //in search status
+			
+			int searchIndex=-1;
+			int taskIndex=-1;
+			boolean found = false;
+			ArrayList<Task> searchList = mgr.getSearchList();
+			ArrayList<Task> taskList = mgr.getTaskList();
+			
+			Task t;
+			if (isInteger(deleteInfo, 10)) { // delete by index
+				searchIndex = Integer.parseInt(deleteInfo)-1;
+				if(searchIndex<searchList.size()  && searchIndex>=0){
+					
+					found =true;
+					t= searchList.get(searchIndex);				
+					Task temp;
+					
+					for (int i = 0; i < taskList.size(); i++) {
+						temp = taskList.get(i);
+						if (temp.equals(t)) {
+							found= true;
+							taskIndex=i;
+							break;
+						}
+					}
+					t= mgr.delete(taskIndex,searchIndex,true);		
+					return "Task deleted: "+t.getName();
+				}
+				
+			}  
+			// delete by name
+			for (int i = 0; i < searchList.size(); i++) {
+				t = searchList.get(i);
+				
+				if (t.getName().equals(deleteInfo)) {
+					searchIndex=i;
+					Task temp;
+					
+					for (int j = 0; j < taskList.size(); j++) {
+						temp = taskList.get(i);
+						if (temp.equals(t)) {
+							taskIndex=i;
+							break;
+						}
+					}
+					found = true;
+					t= mgr.delete(taskIndex,searchIndex,true);		
+					return "Task deleted: "+t.getName();
+				}
+			}
+			
+			//task not found
+			if(found == false){
+				throw new InvalidCommandException("Task not found in searched list. To return to full list,press Enter");
+			}
+			return "Task not found";
+			
 		}
-		mgr.delete(index);		
-		return "task deleted";
+		
+		
 	}
 	
 	private boolean isInteger(String s, int radix) {
@@ -154,6 +227,21 @@ public class DeleteCommand extends Command{
 		return true;
 	}
 
+}
+```
+###### logic\command\InvalidCommandException.java
+``` java
+package logic.command;
+
+public class InvalidCommandException extends Exception{
+    
+	public InvalidCommandException(){
+		super();
+	}
+	
+	public InvalidCommandException(String msg){
+		super(msg);
+	}
 }
 ```
 ###### logic\command\MarkCommand.java
@@ -182,25 +270,42 @@ public class MarkCommand extends Command{
 	}
 
 	@Override
-	public String execute() {
+	/**
+	 * execute mark command and return a string of message
+	 * @return     return message
+	 * @throws InvalidCommandException  If command is invalid.
+	 */
+	public String execute() throws InvalidCommandException{
 		int index=0;
 		ArrayList<Task> taskList = mgr.getTaskList();
 		Task t;
-		if (isInteger(markInfo, 10)) { // mark by index
+		boolean found =false;
+		
+		if (isInteger(markInfo, 10)) { // delete by index
 			index = Integer.parseInt(markInfo)-1;
+			if(index<taskList.size()  && index>=0){
+				found =true;
+				t= mgr.mark(index);		
+				return "Task done: "+t.getName();
+			}
 			
-		} else {// mark by name
-			for (int i = 0; i < taskList.size(); i++) {
-				t = taskList.get(i);
-				if (t.getName().equals(markInfo)) {
-					index=i;
-					break;
-				}
+		}  
+		// delete by name
+		for (int i = 0; i < taskList.size(); i++) {
+			t = taskList.get(i);
+			if (t.getName().equals(markInfo)) {
+				index=i;
+				found = true;
+				break;
 			}
 		}
-		mgr.mark(index);
 		
-		return "task done";
+		if(found == false){
+			throw new InvalidCommandException("Task not found");
+		}
+		
+		t= mgr.mark(index);
+		return "Task done: " + t.getName();
 	}
 	
 	private boolean isInteger(String s, int radix) {
@@ -242,9 +347,12 @@ public class RedoCommand extends Command{
 	}
 
 	@Override
-	public String execute() {
-		mgr.redo();
-		return "redo previous operation";
+	public String execute() throws InvalidCommandException{
+		if(mgr.redo()){
+		    return "Redo previous operation";
+		}else{
+			throw new InvalidCommandException("No operation to redo");
+		}
 	}
 
 }
@@ -276,9 +384,7 @@ public class SearchCommand extends Command{
 	}
 
 	@Override
-	public String execute() {
-		
-		
+	public String execute() throws InvalidCommandException{
 		
 		Task task = new Task(commandInfo.getPhrase());
 		if (commandInfo.startingTime() != null) {
@@ -292,12 +398,55 @@ public class SearchCommand extends Command{
 		String pri = commandInfo.getPriority().trim();
 
 		if (pri != null && pri != "") {
-			task.setPriority(pri);
+			int priority = Integer.parseInt(pri);
+			
+			if(priority>3 || priority<=0){
+				throw new InvalidCommandException
+				("Invalid priority.Priority is valid from 1 to 3");
+			}
+			task.setPriority(priority);
 		}
 
         mgr.search(task);
 		
-		return "search completed";
+		return "Search completed. To go back, press Enter";
+	}
+
+}
+```
+###### logic\command\SetCommand.java
+``` java
+package logic.command;
+
+import java.util.ArrayList;
+
+import logic.Command;
+import logic.CommandType;
+import logic.Manager;
+import logic.Task;
+
+public class SetCommand extends Command{
+
+	CommandType ct;
+	Manager mgr;
+	String pathInfo;
+
+	public SetCommand(CommandType ct,Manager manager,String pathInfo) {
+		super(ct);
+		this.ct= ct;
+		this.mgr=manager;	
+		this.pathInfo = pathInfo;
+		
+	}
+
+	@Override
+	public String execute() throws InvalidCommandException{
+		if(mgr.setPath(pathInfo)){
+			return "Path set to"+ pathInfo;
+		}else{
+			throw new InvalidCommandException("Invalid path");
+			
+		}
 	}
 
 }
@@ -330,22 +479,22 @@ public class SortCommand extends Command{
 	}
 
 	@Override
-	public String execute() {
+	public String execute() throws InvalidCommandException{
 		
 		if (commandInfo.getPhrase().equals("name")) {
 			mgr.sort("name");
-			return "sorted by name";
+			return "Sorted by name";
 			
 		} else if (commandInfo.getPhrase().equals("time")) {
 			mgr.sort("time");
-			return "sorted by time";
+			return "Sorted by time";
 			
 		} else if (commandInfo.getPhrase().equals("priority")) {
 			mgr.sort("priority");
-			return "sorted by priority";
+			return "Sorted by priority";
 
 		} else {
-			return "invalid sorting type";
+			throw new  InvalidCommandException("Invalid sorting type");
 		}
 	}
 
@@ -368,13 +517,15 @@ public class UndoCommand extends Command{
 		super(ct);
 		this.ct= ct;
 		this.mgr=manager;	
-		
 	}
 
 	@Override
-	public String execute() {
-		mgr.undo();
-		return "undo previous operation";
+	public String execute() throws InvalidCommandException{
+		if(mgr.undo()){
+		    return "Undo previous operation";
+		}else{
+			throw new InvalidCommandException("No operation to undo");
+		}
 	}
 
 }
@@ -396,6 +547,7 @@ public class UpdateCommand extends Command{
 	CommandType ct;
 	Manager mgr;
 	CommandPackage commandInfo;
+	boolean inSearchStatus;
 
 	public UpdateCommand(CommandType ct,Manager manager,CommandPackage cp) {
 		super(ct);
@@ -406,49 +558,158 @@ public class UpdateCommand extends Command{
 	}
 
 	@Override
-	public String execute() {
+	public String execute() throws InvalidCommandException{
 		
 		ArrayList<String> update = commandInfo.getUpdateSequence();
 		String target = update.get(1);
-		Task task;
+		Task task=null;
 		Task newTask;
+		boolean found=false;
+		String msg="";
 		ArrayList<Task> taskList = mgr.getTaskList();
-
-		for (int i = 0; i < taskList.size(); i++) {
-			task = taskList.get(i);
-			if (task.getName().equals(target)) {
-
-				if (update.get(2).equalsIgnoreCase("name")) {
-					if (update.get(3) != null) {
-						task.setTaskName(update.get(3));
-					}
-
-				} else if (update.get(2).equals("#")) {
-					task.setPriority(update.get(3));
-				} else if (update.get(2).equalsIgnoreCase("startTime")) {
-					// System.out.println("parse date" +
-					// DateParser.setDate(update.get(3)));
-					task.setStartTime(commandInfo.startingTime());
-				} else if (update.get(2).equalsIgnoreCase("endTime")) {
-					task.setEndTime(commandInfo.endingTime());
-				}
-
-				newTask = new Task(task.getName());
-				newTask.setStartTime(task.getStartTime());
-				newTask.setEndTime(task.getEndTime());
-				if (task.getPriority() != null) {
-					newTask.setPriority(task.getPriority().toString());
-				}
-
-				taskList.remove(i);
-				taskList.add(i, newTask);
-				mgr.setTaskList(taskList);
-				break;
-			}
-
+		int targetIndex=-1;
+		String updateType="";
+		
+		if(isInteger(target,10)==true){
+			targetIndex = Integer.parseInt(target)-1;
+			
 		}
 		
-		return "task updated";
+		if(targetIndex<taskList.size() &&  targetIndex>=0 ){
+			found=true;
+			task = taskList.get(targetIndex);
+		}else{ 
+			for (int i = 0; i < taskList.size(); i++) {
+				task = taskList.get(i);
+				if (task.getName().equals(target)){
+					found = true;
+					targetIndex = i;
+					break;
+				}
+			}
+		}
+		
+		
+		
+		if(found == false){
+			
+			throw new InvalidCommandException("Task not found.Is the index or name correct?");
+			
+		}else{//found == true
+			
+			newTask= copyOf(task);
+			
+			if (update.get(2).equalsIgnoreCase("name")) {
+				if (update.get(3) == null || update.get(3).equals("")) {
+					throw new InvalidCommandException("What's the new name?");
+				}
+				assert update.get(3)!=null;
+				newTask.setTaskName(update.get(3));
+				msg = "Task \""+target+"\" updated to \""+ newTask.getName()+"\"";
+
+			} else if (update.get(2).equals("#") || 
+				update.get(2).equalsIgnoreCase("priority")) {
+				
+				//System.out.println("update p: "+update.get(3));
+				
+				if (update.get(3) == null || update.get(3).equals("")) {
+					throw new InvalidCommandException("What's the new priority?");
+				}
+				
+				if (update.get(3).equals("remove") || update.get(3).equals("delete")) {
+					newTask.setPriority(null);
+					msg = "priority removed";
+					
+				}else if(!isInteger(update.get(3),10)){
+					throw new InvalidCommandException("Priority should be an integer");
+					
+				}else if(isInteger(update.get(3),10)){
+					int priority = Integer.parseInt(update.get(3));	
+					
+					if(priority>3 || priority<=0){		
+						throw new InvalidCommandException
+						("Invalid priority.Priority is valid from 1 to 3");
+					}
+					
+					newTask.setPriority(priority);
+					msg = "Task \""+target+"\" priority updated to \""+priority+"\"";
+				}
+
+			} else if (update.get(2).equalsIgnoreCase("startTime") || 
+					update.get(2).equalsIgnoreCase("st")) {
+				
+				if (update.get(3) == null || update.get(3).equals("")) {
+					throw new InvalidCommandException("What's the new start time?");
+				}
+				if (update.get(3) == "remove" || update.get(3)=="delete") {
+					newTask.setStartTime(null);
+					msg = "priority removed";
+				}else{
+					newTask.setStartTime(commandInfo.startingTime());
+					msg = "Task \""+target+"\" start time updated";
+				}
+				
+				
+			} else if (update.get(2).equalsIgnoreCase("endTime") || 
+					update.get(2).equalsIgnoreCase("et")) {
+				
+				if (update.get(3) == null || update.get(3).equals("")) {
+					throw new InvalidCommandException("What's the new end time?");
+				}
+				if (update.get(3) == "remove" || update.get(3)=="delete") {
+					newTask.setEndTime(null);
+					msg = "priority removed";
+				}else{
+					newTask.setEndTime(commandInfo.endingTime());
+					msg = "Task \""+target+"\" end time updated";
+				}
+				
+				
+			} else{
+				throw new InvalidCommandException("Invalid update type. You can"
+						+ "update name/priority/startTime/endTime");
+			}
+
+			mgr.update(targetIndex, newTask);
+			
+			return msg;
+			
+		}
+		
+	}
+	
+	private boolean isInteger(String s, int radix) {
+		if (s.isEmpty())
+			return false;
+		for (int i = 0; i < s.length(); i++) {
+			if (i == 0 && s.charAt(i) == '-') {
+				if (s.length() == 1)
+					return false;
+				else
+					continue;
+			}
+			if (Character.digit(s.charAt(i), radix) < 0)
+				return false;
+		}
+		return true;
+	}
+	
+	private Task copyOf(Task target){
+		Task newTask = new Task(target.getName());
+		
+		if (target.getStartTime() != null) {
+			newTask.setStartTime(target.getStartTime());;
+		}
+		
+		if (target.getEndTime() != null) {
+			newTask.setEndTime(target.getEndTime());;
+		}
+		
+		if (target.getPriority() != null) {
+			newTask.setPriority(target.getPriority());
+		}
+		
+		return newTask;
 	}
 
 }
@@ -457,6 +718,8 @@ public class UpdateCommand extends Command{
 ``` java
 package logic;
 
+import logic.command.InvalidCommandException;
+
 public abstract class Command {
 	private CommandType ct;
 	
@@ -464,7 +727,7 @@ public abstract class Command {
 		this.ct = ct;
 	}
 	
-	public abstract String execute();
+	public abstract String execute() throws InvalidCommandException;
 	
 }
 ```
@@ -472,12 +735,9 @@ public abstract class Command {
 ``` java
 package logic;
 
-public enum CommandType {
+public enum CommandType{
 	    CREATE, DISPLAY, DELETE, CLEAR, EXIT, INVALID, SORT, SEARCH, UPDATE, REDO, 
 		UNDO, SORTBYSTARTTIME, SORTBYDEADLINE, MARK, SET;
-		
-	
-	
 }
 ```
 ###### logic\LogicClass.java
@@ -487,32 +747,30 @@ import java.util.ArrayList;
 import logic.command.AddCommand;
 import logic.command.ClearCommand;
 import logic.command.DeleteCommand;
+import logic.command.InvalidCommandException;
 import logic.command.MarkCommand;
 import logic.command.RedoCommand;
 import logic.command.SearchCommand;
+import logic.command.SetCommand;
 import logic.command.SortCommand;
 import logic.command.UndoCommand;
 import logic.command.UpdateCommand;
 import parser.CommandPackage;
 
-public class LogicClass implements LogicInterface{
-	// This array will be used to store the messages
+public class LogicClass implements LogicInterface {
 
-	private static ArrayList<Task> archivedList = new ArrayList<Task>();
 	private static boolean isSearchOp = false;
 	Storage storage = Storage.getInstance();
-
-	
-	Manager mgr= Manager.getInstance();
-	
-	private String path = "";
-
+	Manager mgr;
 	static LogicClass theOne = null;
 
 	// constructor
 	private LogicClass() {
-		mgr.setTaskList(storage.read().get(0));	
-		mgr.setArchivedList(storage.read().get(1));
+		mgr = new Manager();
+		mgr.initialize(storage.read().get(0), storage.read().get(1));// taskList
+																		// and
+																		// archivedList
+																		// respectively
 
 	}
 
@@ -524,127 +782,87 @@ public class LogicClass implements LogicInterface{
 		return theOne;
 	}
 
-	public ArrayList<Task> getTaskList(){
+	public ArrayList<Task> getTaskList() {
 
-		if(isSearchOp==true)
+		if (isSearchOp == true) {
 			return mgr.getSearchList();
-		
+		}
 		return mgr.getTaskList();
 	}
-	
-	public ArrayList<Task> getTaskListForSearcher(){
-		
+
+	public ArrayList<Task> getTaskListForSearcher() {
 		return mgr.getTaskList();
 	}
-	
-	public void executeCommand(CommandPackage commandPackage) {
-		isSearchOp = false;
-//		if(commandPackage==null){
-//			System.out.println("cp is null");
-//		}
-//		System.out.print("getCommand"+commandPackage.getCommand());
-		CommandType commandType = CommandType.valueOf(commandPackage.getCommand().toUpperCase());	
+
+	public String executeCommand(CommandPackage commandPackage) throws InvalidCommandException {
+		assert commandPackage != null;
+		CommandType commandType = CommandType.valueOf(commandPackage.getCommand().toUpperCase());
 		Command cmd = null;
 
 		switch (commandType) {
 		case CREATE:
-			cmd = new AddCommand(commandType,mgr,commandPackage);
+			isSearchOp = false;
+			cmd = new AddCommand(commandType, mgr, commandPackage);
 			break;
 		case UPDATE:
-			cmd = new UpdateCommand(commandType,mgr,commandPackage);
+			cmd = new UpdateCommand(commandType, mgr, commandPackage);
 			break;
 		case DELETE:
-			cmd = new DeleteCommand(commandType,mgr,commandPackage.getPhrase());
+
+			if (isSearchOp == false) {
+
+				cmd = new DeleteCommand(commandType, mgr, commandPackage.getPhrase(), false);
+			} else {
+
+				cmd = new DeleteCommand(commandType, mgr, commandPackage.getPhrase(), true);
+			}
+
 			break;
 		case CLEAR:
-			cmd = new ClearCommand(commandType,mgr);
+			cmd = new ClearCommand(commandType, mgr);
 			break;
 		case SORT:
-			cmd = new SortCommand(commandType,mgr,commandPackage);
+			cmd = new SortCommand(commandType, mgr, commandPackage);
 			break;
 		case SEARCH:
 			isSearchOp = true;
-			cmd = new SearchCommand(commandType,mgr,commandPackage);
-			break;	
+			cmd = new SearchCommand(commandType, mgr, commandPackage);
+			break;
 		case REDO:
-			cmd = new RedoCommand(commandType,mgr);
+			cmd = new RedoCommand(commandType, mgr);
 			break;
 		case UNDO:
-			cmd = new UndoCommand(commandType,mgr);
+			cmd = new UndoCommand(commandType, mgr);
 			break;
 		case MARK:
-			cmd = new MarkCommand(commandType,mgr,commandPackage.getPhrase());
+			cmd = new MarkCommand(commandType, mgr, commandPackage.getPhrase());
 			break;
 		case SET:
-			setPath(commandPackage.getPhrase());
+			cmd = new SetCommand(commandType, mgr, commandPackage.getPhrase());
 			break;
 		case EXIT:
 			System.exit(0);
 		default:
-			invalid();
+			return invalid();
 
 		}
-		
+
 		String returnMsg = cmd.execute();
-		
+		return returnMsg;
+
 	}
 
-	//@author A0133949U
 	private String invalid() {
-		return "The command is invalid, please key in the valid command.";
+		return "The command is invalid, type in help to see help sheet.";
 	}
 
-	//@author A0133949U
 	public boolean setPath(String path) {
 		return storage.setPath(path);
 	}
 
-
-	//@author A0133949U
-
-	public boolean setPathFirstTime(){
-		return storage.setPath(this.path);
+	public void setIsSearchOp(boolean tof) {
+		isSearchOp = tof;
 	}
-
-	//@author A0133949U
-//	public static boolean isTodayTask(Task t) {
-//		if (t.getEndTime() == null && t.getStartTime() == null) {
-//			return false;
-//		}
-//
-//		DateTime now = new DateTime();
-//		LocalDate today = now.toLocalDate();
-//		LocalDate tomorrow = today.plusDays(1);
-//
-//		DateTime startOfToday = today.toDateTimeAtStartOfDay(now.getZone());
-//		DateTime startOfTomorrow = tomorrow.toDateTimeAtStartOfDay(now.getZone());
-//
-//		if (t.getEndTime() == null && t.getStartTime() == null) {
-//			return false;
-//		}
-//
-//		if (t.getEndTime() != null) {
-//			if (t.getEndTime().isBefore(startOfToday)) {
-//				return false;
-//			}
-//		}
-//
-//		if (t.getStartTime() != null) {
-//			if (t.getEndTime().isBefore(startOfToday)) {
-//				return false;
-//			}
-//		}
-//
-//		if (t.getStartTime() != null && t.getEndTime() != null && t.getStartTime().isAfter(startOfToday)
-//				&& t.getEndTime().isBefore(startOfTomorrow)) {
-//			return true;
-//		}
-//		return false;
-//	}
-
-
-
-
 }
 ```
 ###### logic\LogicInterface.java
@@ -678,20 +896,26 @@ public class Manager {
     public Manager(){
     	taskList = new ArrayList<Task>();
     	timeline = TimeLine.getInstance();
-    	ptl = ptl.getInstance();
+    	ptl = PriorityTaskList.getInstance();
     	seacher = Searcher.getInstance();
     	searchTaskList = new ArrayList<Task>();
     	archivedList = new ArrayList<Task>();
     	storage = Storage.getInstance();
-    	undoRedo = new UndoRedoOp(taskList);
+    	undoRedo = UndoRedoOp.getInstance();
     }
     
-    public static Manager getInstance(){
-		if(manager == null){
-			manager = new Manager();
-		}
-		return manager;
-	}
+  
+    
+    public void initialize( ArrayList<Task> tl,  ArrayList<Task> al){
+    	taskList = tl;
+        setptlAndTimeLine(taskList);
+        archivedList = al;
+       
+    	undoRedo.addStateToUndo(new ArrayList<Task>(taskList),
+    			new ArrayList<Task>(archivedList),new ArrayList<Task>(searchTaskList));
+    	storage.write(taskList,archivedList);
+    	
+    }
     
     //accessor
     
@@ -711,9 +935,11 @@ public class Manager {
     }
     
     //functions
-    public Task addToTaskList(Task task) {   	
-		taskList.add(task);
-		undoRedo.addStateToUndo(new ArrayList<Task>(taskList));
+    public Task addToTaskList(Task task) {   
+    	
+		taskList.add(0,task);
+		undoRedo.addStateToUndo(new ArrayList<Task>(taskList),
+				new ArrayList<Task>(archivedList),new ArrayList<Task>(searchTaskList));
 		ptl.addToPL(task);
 		timeline.addToTL(task);
 		storage.write(taskList,archivedList);
@@ -722,13 +948,27 @@ public class Manager {
 
 	}
     
-    public Task delete(int index) { 
-    	Task t = taskList.remove(index);    	
-		undoRedo.addStateToUndo(new ArrayList<Task>(taskList));
-		ptl.deleteFromPL(t);;
-		timeline.deleteFromTL(t);
-		storage.write(taskList,archivedList);
-		return t;
+    public Task delete(int taskIndex,int searchIndex,boolean inSearchStatus) {
+    	Task t=null;
+    	if(inSearchStatus || taskIndex == -1){
+    		t = searchTaskList.remove(searchIndex);
+    	}
+    	
+    	if(taskIndex == -1){ //meaning in view-archived mode
+    		t = archivedList.remove(searchIndex);
+    		
+    		
+    	}else{ //taskIndex != -1
+    		t = taskList.remove(taskIndex);    	
+        	
+    		ptl.deleteFromPL(t);;
+    		timeline.deleteFromTL(t);
+    	}
+    	
+    	undoRedo.addStateToUndo(new ArrayList<Task>(taskList),
+    			new ArrayList<Task>(archivedList),new ArrayList<Task>(searchTaskList));
+    	storage.write(taskList,archivedList);
+    	return t;
 
 	}
     
@@ -736,7 +976,8 @@ public class Manager {
     	taskList.clear();
 		ptl.clear();
 		timeline.clear();
-		undoRedo.addStateToUndo(new ArrayList<Task>(taskList));
+		undoRedo.addStateToUndo(new ArrayList<Task>(taskList),
+    			new ArrayList<Task>(archivedList),new ArrayList<Task>(searchTaskList));
 		storage.write(taskList,archivedList);
 
     }
@@ -757,25 +998,44 @@ public class Manager {
 			taskList.addAll(ptl.getP3());
 			taskList.addAll(ptl.getP4());
 			break;
+    	case "#":
+    		taskList = new ArrayList<Task>(ptl.getP1());
+			taskList.addAll(ptl.getP2());
+			taskList.addAll(ptl.getP3());
+			taskList.addAll(ptl.getP4());
+			break;
     	}
-		undoRedo.addStateToUndo(new ArrayList<Task>(taskList));
+    	undoRedo.addStateToUndo(new ArrayList<Task>(taskList),
+    			new ArrayList<Task>(archivedList),new ArrayList<Task>(searchTaskList));
 		storage.write(taskList,archivedList);
 
 	}
     
     public void search(Task task){
-    	System.out.println("name"+task.getName());
+
     	if(task.getName().equals("done")){
     		searchTaskList = new ArrayList<Task>(archivedList);
     	}else{
+    		
     		searchTaskList = new ArrayList<Task>(seacher.search(task));
     	}
+    	
+    	undoRedo.addStateToUndo(new ArrayList<Task>(taskList),
+    			new ArrayList<Task>(archivedList),new ArrayList<Task>(searchTaskList));
     	
   	
     }
     
-    public void redo(){
-    	taskList = undoRedo.redo();
+    public boolean redo(){
+    	ArrayList<ArrayList<Task>> lists = undoRedo.redo();
+    	if(lists==null){
+    		return false;
+    	}
+    	assert(lists != null);
+    	taskList = lists.get(0);
+    	archivedList = lists.get(1);
+    	searchTaskList = lists.get(2);
+    	
 		ptl.clear();
 		timeline.clear();
 		for (int i = 0; i < taskList.size(); i++) {
@@ -783,16 +1043,27 @@ public class Manager {
 			ptl.addToPL(task);
 			timeline.addToTL(task);
 		}
+		
 		storage.write(taskList,archivedList);
-  	
+  	    return true;
     }
     
-    public void undo(){
-    	taskList = new ArrayList<Task>(undoRedo.undo());
+    public boolean undo(){
+    	ArrayList<ArrayList<Task>> lists = undoRedo.undo();
+    	if(lists==null){
+    		return false;
+    	}
+    	assert(lists != null);
+
+    	taskList = new ArrayList<Task>(lists.get(0));
+    	archivedList = new ArrayList<Task>(lists.get(1));
+    	searchTaskList = lists.get(2);
+    	
 		ptl.clear();
 		timeline.clear();
 		setptlAndTimeLine(taskList);
 		storage.write(taskList,archivedList);
+		return true;
     }
     
     public boolean setPath(String pathInfo){
@@ -807,7 +1078,8 @@ public class Manager {
     	Task t = taskList.remove(index); 
     	archivedList.add(t);
     	System.out.println("al"+archivedList.toString());
-		undoRedo.addStateToUndo(new ArrayList<Task>(taskList));
+    	undoRedo.addStateToUndo(new ArrayList<Task>(taskList),
+    			new ArrayList<Task>(archivedList),new ArrayList<Task>(searchTaskList));
 		ptl.deleteFromPL(t);;
 		timeline.deleteFromTL(t);
 		storage.write(taskList,archivedList);
@@ -815,25 +1087,12 @@ public class Manager {
 		
 	}
     
-    
-
-    
-    public void setTaskList(ArrayList<Task> tl){
-    	taskList = tl;
-    	
-    	undoRedo.addStateToUndo(new ArrayList<Task>(taskList));
-    	//System.out.println(taskList.size());
-    	setptlAndTimeLine(taskList);
-    	
-    	storage.write(taskList,archivedList);
-    	
-    }
-    
-    public void setArchivedList(ArrayList<Task> al){
-    	archivedList = al;
-    	undoRedo.addStateToUndo(new ArrayList<Task>(taskList));
-    	storage.write(taskList,archivedList);
-    	
+    public void update(int index, Task newTask){ 	
+    	taskList.remove(index);
+		taskList.add(index,newTask);
+		undoRedo.addStateToUndo(new ArrayList<Task>(taskList),
+    			new ArrayList<Task>(archivedList),new ArrayList<Task>(searchTaskList));
+		storage.write(taskList,archivedList);
     }
     
     public void setptlAndTimeLine(ArrayList<Task> tl){
@@ -843,6 +1102,12 @@ public class Manager {
 			timeline.addToTL(task);
 		}
     	storage.write(taskList,archivedList);
+    	
+    }
+    
+    // for testing only
+    public void addToSearchList(Task task){
+    	searchTaskList.add(task);
     	
     }
     
