--- a/src/collated/A0133915H.md
+++ b/src/collated/A0133915H.md
@@ -1,23 +1,181 @@
 # A0133915H
+###### gui\GUITest.java
+``` java
+package gui;
+
+import static org.junit.Assert.*;
+
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.TimeoutException;
+
+import org.junit.After;
+import org.junit.AfterClass;
+import org.junit.Before;
+import org.junit.BeforeClass;
+import org.junit.Test;
+import org.testfx.api.FxToolkit;
+
+import javafx.scene.control.TextField;
+import javafx.scene.input.KeyCode;
+import javafx.scene.text.Text;
+import javafx.stage.Stage;
+
+import org.testfx.api.FxRobot;
+import org.testfx.util.WaitForAsyncUtils;
+
+/***********************************************************
+ * This is the simple automated GUI test.
+ *
+ **********************************************************/
+public class GUITest extends FxRobot {
+
+	private static MainApp mainApp;
+	public static Stage primaryStage;
+
+	// Setting up
+	@BeforeClass
+	public static void setUpClass() throws Exception {
+		primaryStage = FxToolkit.registerPrimaryStage();
+	}
+
+	@AfterClass
+	public static void tearDownClass() {
+	}
+
+	@Before
+	public void before() {
+		try {
+			mainApp = (MainApp) FxToolkit.setupApplication(MainApp.class);
+			WaitForAsyncUtils.waitFor(10, TimeUnit.SECONDS, primaryStage.showingProperty());
+			sleep(2000);
+		} catch (Exception e) {
+			e.printStackTrace(System.out);
+		}
+	}
+
+	@After
+	public void after() throws TimeoutException {
+		FxToolkit.cleanupStages();
+		FxToolkit.hideStage();
+	}
+
+	@Test
+	public void keyValidEnterTest() {
+		TextField commandInput = (TextField) mainApp.getScene().lookup("#txtCommandInput");
+		clickOn("#txtCommandInput").write("add meeting 9-Nov-2016").push(KeyCode.ENTER);
+		assertTrue(commandInput.getText().equals(""));
+	}
+	
+//	@Test
+//	public void keyInvalidIndexDeleteEnterTest() {
+//		Text feedback = (Text) mainApp.getScene().lookup("#feedback");
+//		clickOn("#txtCommandInput").write("delete 100").push(KeyCode.ENTER);
+//		assertTrue(feedback.getText().equals("Task not found"));
+//	}
+
+	@Test
+	public void keyInvalidEnterTest() {
+		Text feedback = (Text) mainApp.getScene().lookup("#feedback");
+		clickOn("#txtCommandInput").write("abcabc").push(KeyCode.ENTER);
+		assertTrue(feedback.getText().equals("Invalid command. Please type \"help\" for more instructions."));
+	}
+
+	@Test
+	public void keyInvalidPriorityEnterTest() {
+		Text feedback = (Text) mainApp.getScene().lookup("#feedback");
+		clickOn("#txtCommandInput").write("add meeting #6").push(KeyCode.ENTER);
+		assertTrue(feedback.getText().equals("Invalid priority.Priority is valid from 1 to 3"));
+	}
+	
+	@Test
+	public void keyInvalidNameDeleteEnterTest() {
+		Text feedback = (Text) mainApp.getScene().lookup("#feedback");
+		clickOn("#txtCommandInput").write("delete party").push(KeyCode.ENTER);
+		assertTrue(feedback.getText().equals("Task not found"));
+	}
+
+	@Test
+	public void keySearchEnterTest() {
+		Text feedback = (Text) mainApp.getScene().lookup("#feedback");
+		clickOn("#txtCommandInput").write("search meeting").push(KeyCode.ENTER);
+		assertTrue(feedback.getText().equals("Search completed. To go back, press Enter"));
+	}
+
+//	 @Test
+//	 public void keyInvalidSearchDeleteEnterTest() {
+//	 Text feedback = (Text) mainApp.getScene().lookup("#feedback");
+//	 clickOn("#txtCommandInput").write("add meeting").push(KeyCode.ENTER);
+//	 clickOn("#txtCommandInput").write("search meeting").push(KeyCode.ENTER);
+//	 clickOn("#txtCommandInput").write("delete party").push(KeyCode.ENTER);
+//	 assertTrue(feedback.getText().equals("Task not found in searched list. To return to full list,press Enter"));
+//	 }
+
+	@Test
+	public void keyClearEnterTest() {
+		Text feedback = (Text) mainApp.getScene().lookup("#feedback");
+		clickOn("#txtCommandInput").write("clear").push(KeyCode.ENTER);
+		assertTrue(feedback.getText().equals("All tasks cleared"));
+	}
+
+	// @Test
+	// public void tableViewContentTest(){
+	// TableView<Task> tableView = (TableView<Task>)
+	// mainApp.getScene().lookup("#taskTableView");
+	// clickOn("#txtCommandInput").push(KeyCode.ENTER);
+	// ObservableList<Task> expectedList = mainApp.getTaskData();
+	// assertTrue(tableView.getColumns().equals(expectedList));
+	// }
+
+}
+```
 ###### gui\MainApp.java
 ``` java
+package gui;
+
+import logic.LogicClass;
+import logic.Task;
+
+import javafx.collections.ObservableList;
+import javafx.event.ActionEvent;
+import javafx.event.EventHandler;
+
+import java.util.ArrayList;
+import java.util.logging.Level;
+import java.util.logging.Logger;
+
+import javafx.application.Application;
+import javafx.collections.FXCollections;
+import javafx.fxml.FXMLLoader;
+import javafx.scene.Scene;
+import javafx.scene.control.Button;
+import javafx.scene.control.ScrollPane;
+import javafx.scene.image.Image;
+import javafx.scene.image.ImageView;
+import javafx.scene.layout.AnchorPane;
+import javafx.scene.layout.BorderPane;
+import javafx.stage.Stage;
+
+/**************************************************************
+ * This is the main GUI class
+ * 
+ *************************************************************/
 public class MainApp extends Application {
 	private Stage primaryStage;
-
-	private static ObservableList<Task> taskList;
-	LogicClass lc = LogicClass.getInstance();
-
+	private Scene scene;
+	private TaskViewController controller; 
+	private LogicClass lc;
+	
+	private static ObservableList<Task> taskList;	
 	private static Logger logger = Logger.getLogger("MainApp");
 
 	public MainApp() {
+		lc = LogicClass.getInstance();
 	}
 
 	public ObservableList<Task> getTaskData() {
 		
 		ArrayList<Task> tasks = lc.getTaskList();
-		for (int i = 0; i < tasks.size(); i++) {
-			System.out.println(tasks.get(i).getName());
-		}
+		
 		for (int i = 0; i < tasks.size(); i++) {
 			tasks.get(i).setTaskNumber(i + 1);
 		}
@@ -29,6 +187,10 @@ public class MainApp extends Application {
 	public void start(Stage primaryStage) {
 		try {
 
+			/**
+			 * It is a "help" button, in case users need help but they do not which to approach. 
+			 * It initial a action which opens a new window showing the help index.
+			 */
 			Button btn = new Button();
 			btn.setText("Help");
 			btn.setOnAction(new EventHandler<ActionEvent>() {
@@ -37,25 +199,26 @@ public class MainApp extends Application {
 					indexHelp();
 				}
 			});
-
+			
 			BorderPane rootLayout = new BorderPane();
-
 			rootLayout.setTop(btn);
+			
+			//set up the primary Stage.
 			this.primaryStage = primaryStage;
 			this.primaryStage.setTitle("TaskBomber");
 
+			//Load the fxml file of the basic view
 			FXMLLoader loader = new FXMLLoader();
 			loader.setLocation(MainApp.class.getResource("TaskView.fxml"));
 			AnchorPane taskBomberOverview = (AnchorPane) loader.load();
 
 			// Set person overview into the center of root layout.
 			rootLayout.setCenter(taskBomberOverview);
-			TaskViewController controller = loader.getController();
+			controller = loader.getController();
 
 			controller.setMainApp(this);
-			logger.log(Level.INFO, "RootLayout is initiated.");
 
-			Scene scene = new Scene(rootLayout);
+			scene = new Scene(rootLayout);
 			primaryStage.setScene(scene);
 			primaryStage.show();
 
@@ -66,6 +229,9 @@ public class MainApp extends Application {
 		}
 	}
 
+	/**
+	 * This is a method to show the help sheet.
+	 */
 	public void indexHelp() {
 		Image image = new Image("gui/help/Index.PNG");
 		ImageView imageView = new ImageView();
@@ -88,6 +254,9 @@ public class MainApp extends Application {
 		secondStage.show();
 	}
 
+	/**
+	 * This is a method to show the "sos" form.
+	 */
 	public void sos() {
 		Image image = new Image("gui/help/SOS.PNG");
 		ImageView imageView = new ImageView();
@@ -111,6 +280,9 @@ public class MainApp extends Application {
 		thirdStage.show();
 	}
 
+	/**
+	 * This is the method to show the basic command foramt.
+	 */
 	public void basic() {
 		Image image = new Image("gui/help/Basic.PNG");
 		ImageView imageView = new ImageView();
@@ -134,6 +306,9 @@ public class MainApp extends Application {
 		fourthStage.show();
 	}
 	
+	/**
+	 * This is a method to show the advance command format.
+	 */
 	public void advance() {
 		Image image = new Image("gui/help/Advance.PNG");
 		ImageView imageView = new ImageView();
@@ -157,6 +332,9 @@ public class MainApp extends Application {
 		fifthStage.show();
 	}
 
+	/**
+	 * This is the method to show the shortcut form.
+	 */
 	public void shortForm() {
 		Image image = new Image("gui/help/Shortcut.PNG");
 		ImageView imageView = new ImageView();
@@ -180,6 +358,9 @@ public class MainApp extends Application {
 		sixthStage.show();
 	}
 	
+	/**
+	 * This is a method to load a new window showing a picture of our team.
+	 */
 	public void credit() {
 		Image image = new Image("gui/help/Credits.PNG");
 		ImageView imageView = new ImageView();
@@ -218,20 +399,65 @@ public class MainApp extends Application {
 		return primaryStage;
 	}
 
+	/**
+	 * launch the view
+	 * @param args
+	 */
 	public static void main(String[] args) {
 		launch(args);
 	}
 
+	/**
+	 * For testing
+	 */
+	public TaskViewController getController(){
+		return controller;
+	}
+	
+	/**
+	 * For testing
+	 */
+	public Scene getScene(){
+		return scene;
+	}
 }
 ```
 ###### gui\TaskViewController.java
 ``` java
+package gui;
+
+import logic.*;
+import logic.command.InvalidCommandException;
+import parser.CommandPackage;
+import parser.CommandParser;
+
+import java.util.Stack;
+import java.util.logging.Level;
+import java.util.logging.Logger;
+
+import javafx.fxml.FXML;
+import javafx.scene.control.TableColumn;
+import javafx.scene.control.TableView;
+import javafx.scene.control.TextField;
+import javafx.scene.input.KeyCode;
+import javafx.scene.input.KeyCodeCombination;
+import javafx.scene.input.KeyCombination;
+import javafx.scene.input.KeyEvent;
+import javafx.scene.text.Text;
+
+/**********************************************************
+ * This is our GUI basic view controller.
+ *
+ */
 public class TaskViewController {
 
 	private final KeyCombination crtlZ = new KeyCodeCombination(KeyCode.Z, KeyCombination.CONTROL_DOWN);
 	private final KeyCombination crtlY = new KeyCodeCombination(KeyCode.Y, KeyCombination.CONTROL_DOWN);
+	private final String invalidMsg = "Invalid command. Please type \"help\" for more instructions.";
+	
 	private static Stack<String> pastCommands = new Stack<String>();
 	private static Stack<String> poppedCommands = new Stack<String>();
+
 
 	@FXML
 	private TextField txtCommandInput;
@@ -250,16 +476,13 @@ public class TaskViewController {
 	private TableColumn<Task, String> priority;
 
 	@FXML
-	private ListView<String> todayTasksView;
-
-	ArrayList<String> todayTasks = new ArrayList<String>();
-
+	private Text feedback;
+	
 	// Reference to the main application.
 	private MainApp mainApp;
 
-	private LogicClass logic = LogicClass.getInstance();
-
-	CommandParser cmdParser = new CommandParser();
+	private LogicClass logic;
+	private CommandParser cmdParser;
 
 	private static Logger logger = Logger.getLogger("TaskViewController");
 
@@ -268,6 +491,8 @@ public class TaskViewController {
 	 * method.
 	 */
 	public TaskViewController() {
+		logic = LogicClass.getInstance();
+		cmdParser = CommandParser.getInstance();
 	}
 
 	@FXML
@@ -281,6 +506,7 @@ public class TaskViewController {
 	}
 
 	public void enterCommand(KeyEvent event) {
+		//Different keyboard action will invoke different actions
 		if (event.getCode() == KeyCode.ENTER) {
 			enterKeyEvent();
 		} else if (event.getCode() == KeyCode.UP) {
@@ -294,14 +520,23 @@ public class TaskViewController {
 		}
 	}
 
+	/**
+	 * Shortcut Ctrl + Y for Redo
+	 */
 	private void controlYKeyEvent() {
 		execute("redo");
 	}
 
+	/**
+	 * Shortcut Ctrl + Z for Undo
+	 */
 	private void controlZKeyEvent() {
 		execute("undo");
 	}
 
+	/**
+	 * Shortcut down key for go to next key-in command
+	 */
 	private void downKeyEvent() {
 		if (poppedCommands.isEmpty()) {
 			txtCommandInput.clear();
@@ -313,6 +548,9 @@ public class TaskViewController {
 		}
 	}
 
+	/**
+	 * Shortcut down key for go back to previous key-in command
+	 */
 	private void upKeyEvent() {
 		if (pastCommands.isEmpty()) {
 			txtCommandInput.clear();
@@ -324,49 +562,74 @@ public class TaskViewController {
 		}
 	}
 
+	/**
+	 * Main actions invoked by key "Enter"
+	 */
 	private void enterKeyEvent() {
-		if (txtCommandInput.getText() == null || txtCommandInput.getText().isEmpty()) {
+		String input = txtCommandInput.getText();
+		//If the input is empty, return to the normal task list.
+		if (input == null || input.isEmpty() || input.trim().length() == 0) {
+			logic.setIsSearchOp(false);
 			taskTableView.setItems(mainApp.getTaskData());
 		} else {
-			String input = txtCommandInput.getText();
+			//for command stack
 			pastCommands.push(input);
+			//Differentiate different command types.Handle help windows here.
 			if (input.equalsIgnoreCase("exit")) {
 				mainApp.exit();
+				txtCommandInput.clear();
 			} else if (input.equalsIgnoreCase("help")) {
 				mainApp.indexHelp();
+				txtCommandInput.clear();
 			} else if (input.equalsIgnoreCase("sos")) {
 				mainApp.sos();
-			} else if (input.equalsIgnoreCase("basic")
-					|| input.equalsIgnoreCase("`hb")) {
+				txtCommandInput.clear();
+			} else if (input.equalsIgnoreCase("basic") || input.equalsIgnoreCase("`hb")) {
 				mainApp.basic();
-			} else if (input.equalsIgnoreCase("advance")
-					|| input.equalsIgnoreCase("`ha")) {
+				txtCommandInput.clear();
+			} else if (input.equalsIgnoreCase("advance") || input.equalsIgnoreCase("`ha")) {
 				mainApp.advance();
-			} else if (input.equalsIgnoreCase("shortcut")
-					|| input.equalsIgnoreCase("shortcuts")
-					|| input.equalsIgnoreCase("shortform")
-					|| input.equalsIgnoreCase("shortforms")
+				txtCommandInput.clear();
+			} else if (input.equalsIgnoreCase("shortcut") || input.equalsIgnoreCase("shortcuts")
+					|| input.equalsIgnoreCase("shortform") || input.equalsIgnoreCase("shortforms")
 					|| input.equalsIgnoreCase("`sc")) {
 				mainApp.shortForm();
-			} else if (input.equalsIgnoreCase("credit")
-					|| input.equalsIgnoreCase("`cd")) {
+				txtCommandInput.clear();
+			} else if (input.equalsIgnoreCase("credit") || input.equalsIgnoreCase("`cd")) {
 				mainApp.credit();
+				txtCommandInput.clear();
 			} else {
+				//if the command does not belong to any commands above, pass it to the parser and logic
 				String inputCommand = txtCommandInput.getText().trim();
 				logger.log(Level.INFO, "Here comes a command.");
 				execute(inputCommand);
 			}
-			txtCommandInput.clear();
 		}
 	}
 
+	/**
+	 * This is the method to pass the package from parser to the logic for execution.
+	 * @param input User's input string
+	 */
 	private void execute(String input) {
 		CommandPackage cmdPack = cmdParser.getCommandPackage(input);
 		logger.log(Level.INFO, "CommandParser parses the command.");
-		assert (cmdPack != null);
-		logic.executeCommand(cmdPack);
-		taskTableView.setItems(mainApp.getTaskData());
-		logger.log(Level.INFO, "Update the table view.");
+		if (cmdPack == null) {
+			System.out.println("input: "+ input);
+			feedback.setText(invalidMsg);
+		} else {
+			assert (cmdPack != null);
+			try {
+				System.out.println(input);
+				String result = logic.executeCommand(cmdPack);
+				feedback.setText(result);
+				txtCommandInput.clear();
+				taskTableView.setItems(mainApp.getTaskData());
+				logger.log(Level.INFO, "Update the table view.");
+			} catch (InvalidCommandException e) {
+				feedback.setText(e.getMessage());
+			}
+		}
 	}
 
 	/**
@@ -383,130 +646,53 @@ public class TaskViewController {
 	}
 }
 ```
-###### logic\Task.java
+###### gui\Testing.java
 ``` java
-public class Task implements Comparable<Task> {
-	private String name;
-	private DateTime startTime = null;
-	private DateTime endTime = null;
-	private Integer priority = null;
-	private Integer taskNum = null;
+package gui;
 
-	//@author A0133949U
+import java.util.ArrayList;
+import java.util.Scanner;
 
-	public Task(String name) {
-		this.name = name;
+import logic.LogicClass;
+import logic.Task;
+import logic.command.InvalidCommandException;
+import parser.CommandPackage;
+import parser.CommandParser;
+
+/************************************************************************
+ * This is a simple test for the whole system, but not automated. 
+ * @author susumei
+ *
+ ************************************************************************/
+public class Testing {
+	public static void main(String[] args) throws InvalidCommandException {
+		Scanner sc = new Scanner(System.in);
+		LogicClass logic = LogicClass.getInstance();
+		CommandParser cmdParser = CommandParser.getInstance();
+		while (true) {
+			System.out.println("Plz key in your command: ");
+			String input = sc.nextLine();
+			CommandPackage cmdPack = cmdParser.getCommandPackage(input);
+			logic.executeCommand(cmdPack);
+			ArrayList<Task> taskList = new ArrayList<Task>();
+			taskList = LogicClass.getInstance().getTaskList();
+			for (int i = 0; i < taskList.size(); i++) {
+				System.out.println(i + ". " + taskList.get(i).getName());
+			}
+			sc.close();
+		}
 	}
-
-	//@author A0133949U
-	public Task(String name, DateTime start, DateTime end, int pri) {
-		this.name = name;
-		this.startTime = start;
-		this.endTime = end;
-		this.priority = pri;
-	}
-
-	//@author A0133949U
-	public String getName() {
-		return this.name;
-	}
-
-	//@author A0133949U
-	public DateTime getStartTime() {
-		return this.startTime;
-	}
-
-	//@author A0133949U
-	public DateTime getEndTime() {
-		return this.endTime;
-	}
-
-	//@author A0133949U
-	public Integer getPriority() {
-		return this.priority;
-	}
-
-	//@author A0133949U
-	public Integer getTaskNum() {
-		return this.taskNum;
-	}
-
-	//@author A0133949U
-	public void setStartTime(DateTime start) {
-		this.startTime = start;
-	}
-
-	//@author A0133949U
-	public void setEndTime(DateTime end) {
-		this.endTime = end;
-	}
-
+}
 ```
 ###### logic\Task.java
 ``` java
-	public void setPriority(String pri) {
-		if (pri == null) {
-			System.out.println("Oh no the priority is null");
-		}
-		if (pri != null && pri != "") {
-			// System.out.println("The priority should not be null here");
-			this.priority = Integer.parseInt(pri);
-		}
-	}
-
-	//@author A0133949U
-	public void setTaskNumber(Integer taskNumber) {
-		this.taskNum = taskNumber;
-	}
-
-	//@author A0133949U
-	public void setTaskName(String name) {
-		this.name = name;
-	}
-
-	//@author A0133949U
-	public boolean containKeyword(String keyword) {
-		if (name.matches(".*\\b" + keyword + "\\b.*")) {
-			return true;
-		} else if (startTime.toString().matches(".*\\b" + keyword + "\\b.*")) {
-			return true;
-		} else if (endTime.toString().matches(".*\\b" + keyword + "\\b.*")) {
-			return true;
-			// } else if (deadline.toString().matches(".*\\b" + keyword +
-			// "\\b.*")) {
-			// return true;
-			// } else if (location.matches(".*\\b" + keyword + "\\b.*")) {
-			// return true;
-			// } else if (description.matches(".*\\b" + keyword + "\\b.*")) {
-			// return true;
-		} else {
-			return false;
-		}
-	}
-
-	@Override
-	//@author A0133949U
-	public int compareTo(Task oTask) {
-		int result = this.name.compareToIgnoreCase(oTask.name);
-		if (result < 0)
-			return -1;
-		else if (result == 0)
-			return 0;
-		else
-			return 1;
-
-	}
-
-	@Override
-	//@author A0133949U
-	public String toString() {
-		return name;
-	}
-
 	public StringProperty taskNameProperty() {
 		return new SimpleStringProperty(this.name);
 	}
-
+	
+```
+###### logic\Task.java
+``` java
 	public StringProperty startTimeProperty() {
 		// System.out.println("startTime: " + startTime);
 		StringProperty result;
@@ -529,7 +715,10 @@ public class Task implements Comparable<Task> {
 		}
 		return result;
 	}
-
+	
+```
+###### logic\Task.java
+``` java
 	public StringProperty endTimeProperty() {
 		// System.out.println("endTime: " + endTime);
 		StringProperty result;
@@ -552,6 +741,9 @@ public class Task implements Comparable<Task> {
 		return result;
 	}
 
+```
+###### logic\Task.java
+``` java
 	public StringProperty priorityProperty() {
 		if (this.priority == null) {
 			return new SimpleStringProperty("");
@@ -567,86 +759,492 @@ public class Task implements Comparable<Task> {
 	}
 }
 ```
-###### logic\UndoRedoOpTest.java
+###### logic\UndoRedoOp.java
 ``` java
+package logic;
+
+import java.util.ArrayList;
+import java.util.Stack;
+
+/************************************************************************
+ * This is a class for undo/redo operation implementation. It maintains 3
+ * taskLists' undo and redo stack: taskList, searchTaskList and
+ * archivedTaskList.
+ * 
+ * @author susumei
+ *
+ ************************************************************************/
+public class UndoRedoOp {
+
+	private Stack<ArrayList<Task>> undoStack = null;
+	private Stack<ArrayList<Task>> redoStack = null;
+	private Stack<ArrayList<Task>> archivedUndoStack = null;
+	private Stack<ArrayList<Task>> archivedRedoStack = null;
+	private Stack<ArrayList<Task>> searchUndoStack = null;
+	private Stack<ArrayList<Task>> searchRedoStack = null;
+
+	private static UndoRedoOp theOne = null;
+
+	/**
+	 * Constructor: initial all the stacks.
+	 */
+	private UndoRedoOp() {
+		undoStack = new Stack<ArrayList<Task>>();
+		redoStack = new Stack<ArrayList<Task>>();
+		archivedUndoStack = new Stack<ArrayList<Task>>();
+		archivedRedoStack = new Stack<ArrayList<Task>>();
+		searchUndoStack = new Stack<ArrayList<Task>>();
+		searchRedoStack = new Stack<ArrayList<Task>>();
+	}
+
+	public static UndoRedoOp getInstance() {
+		if (theOne == null) {
+			theOne = new UndoRedoOp();
+		}
+		return theOne;
+	}
+
+	/**
+	 * undo: implement undo operation and maintain three task lists
+	 * 
+	 * @return ArrayList<ArrayList<Task> the arraylist that contains three task
+	 *         lists
+	 */
+	public ArrayList<ArrayList<Task>> undo() {
+		ArrayList<ArrayList<Task>> previousState = new ArrayList<ArrayList<Task>>();
+		
+		// undoStack and archivedUndoStack should have the same length
+		if (!undoStack.isEmpty() && !archivedUndoStack.isEmpty() && !searchUndoStack.isEmpty()) {
+
+			ArrayList<Task> current = undoStack.pop();
+			ArrayList<Task> currentArchived = archivedUndoStack.pop();
+			ArrayList<Task> currentSearch = searchUndoStack.pop();
+
+			redoStack.push(new ArrayList<Task>(current));
+			archivedRedoStack.push(new ArrayList<Task>(currentArchived));
+			searchRedoStack.push(new ArrayList<Task>(currentSearch));
+
+			if (!undoStack.isEmpty() && !archivedUndoStack.isEmpty() && !searchUndoStack.isEmpty()) {
+				System.out.println("herereeee"+ searchUndoStack.toString());
+				previousState.add(new ArrayList<Task>(undoStack.peek()));
+				previousState.add(new ArrayList<Task>(archivedUndoStack.peek()));
+				previousState.add(new ArrayList<Task>(searchUndoStack.peek()));
+				return previousState;
+			} else {
+				return null;
+			}
+		} else if (undoStack.isEmpty() && archivedUndoStack.isEmpty() && searchUndoStack.isEmpty()) {
+			return null;
+		} else {
+			// there must be something wrong if only some of the stacks are
+			// empty.
+			undoStack.clear();
+			archivedUndoStack.clear();
+			searchUndoStack.clear();
+		}
+		return null;
+	}
+
+	/**
+	 * redo: implement redo operation and maintain three task lists
+	 * 
+	 * @return ArrayList<ArrayList<Task> the arraylist that contains three task
+	 *         lists
+	 */
+	public ArrayList<ArrayList<Task>> redo() {
+		ArrayList<ArrayList<Task>> previousState = new ArrayList<ArrayList<Task>>();
+
+		if (!redoStack.isEmpty() && !archivedRedoStack.isEmpty() && !searchRedoStack.isEmpty()) {
+			ArrayList<Task> previousFromRedo = new ArrayList<Task>(redoStack.pop());
+			ArrayList<Task> previousFromAchivedRedo = new ArrayList<Task>(archivedRedoStack.pop());
+			ArrayList<Task> previousFromSeachRedo = new ArrayList<Task>(searchRedoStack.pop());
+			previousState.add(previousFromRedo);
+			previousState.add(previousFromAchivedRedo);
+			previousState.add(previousFromSeachRedo);
+			undoStack.push(previousFromRedo);
+			archivedUndoStack.push(previousFromAchivedRedo);
+			searchUndoStack.push(previousFromSeachRedo);
+			return previousState;
+		} else if (redoStack.isEmpty() && archivedRedoStack.isEmpty() && searchRedoStack.isEmpty()) {
+			return null;
+		} else {
+			// there must be something wrong if only some of the stacks are
+			// empty.
+			redoStack.clear();
+			archivedRedoStack.clear();
+			searchRedoStack.clear();
+		}
+		return null;
+	}
+
+	public ArrayList<ArrayList<Task>> addStateToUndo(ArrayList<Task> recentState, ArrayList<Task> archivedList,
+			ArrayList<Task> searchList) {
+		
+		assert (recentState != null);
+		assert (archivedList != null);
+		assert (searchList != null);
+		undoStack.push(new ArrayList<Task>(recentState));
+		archivedUndoStack.push(new ArrayList<Task>(archivedList));
+		searchUndoStack.push(new ArrayList<Task>(searchList));
+		redoStack.clear();
+		archivedRedoStack.clear();
+		searchRedoStack.clear();
+		ArrayList<ArrayList<Task>> currentList = new ArrayList<ArrayList<Task>>();
+		currentList.add(new ArrayList<Task>(recentState));
+		currentList.add(new ArrayList<Task>(archivedList));
+		currentList.add(new ArrayList<Task>(searchList));
+		// return for Junit test
+		return currentList;
+	}
+}
+```
+###### test\LogicClassTest.java
+``` java
+package test;
+
+import static org.junit.Assert.*;
+
+import java.util.ArrayList;
+
+import org.junit.After;
+import org.junit.Before;
+import org.junit.BeforeClass;
+import org.junit.Test;
+
+import logic.LogicClass;
+import logic.Task;
+import logic.command.InvalidCommandException;
+import parser.CommandPackage;
+import parser.CommandParser;
+
+public class LogicClassTest {
+
+	private static LogicClass logicClass;
+	private static CommandParser parser;
+	private static ArrayList<Task> taskList;
+	
+	@BeforeClass
+	public static void oneTimeSetUp() {
+		logicClass = LogicClass.getInstance();
+		parser = CommandParser.getInstance();
+		taskList = new ArrayList<Task>(logicClass.getTaskList());
+	}
+
 	@Before
 	public void setUp() {
+	}
+
+	@After
+	public void tearDown() {
+	}
+
+	@Test
+	public void addTest() {
+		CommandPackage cmdPackage = parser.getCommandPackage("add meeting");
+		try {
+			logicClass.executeCommand(cmdPackage);
+		} catch (InvalidCommandException e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+		}
+		
+		taskList.add(new Task("meeting"));
+		
+		for(int i = 0; i < taskList.size(); i++){
+			assertEquals(taskList.get(i).getName(), logicClass.getTaskList().get(i).getName());
+		}
+	}
+
+}
+```
+###### test\UndoRedoOpTest.java
+``` java
+package test;
+
+import static org.junit.Assert.*;
+
+import java.util.ArrayList;
+
+import org.junit.After;
+import org.junit.Before;
+import org.junit.BeforeClass;
+import org.junit.Test;
+
+import logic.Task;
+import logic.UndoRedoOp;
+
+public class UndoRedoOpTest {
+
+	private static ArrayList<Task> initial = new ArrayList<Task>();
+	private static ArrayList<Task> initialArchived = new ArrayList<Task>();
+	private static ArrayList<Task> initialSearch = new ArrayList<Task>();
+
+	/***************************************************************
+	 * Scripted testing & white-box testing This test is only for the undo/redo
+	 * function
+	 ***************************************************************/
+
+	@BeforeClass
+	public static void oneTimeSetUp() {
+		initial.clear();
+		initialArchived.clear();
+		initialSearch.clear();
+	}
+
+	@Before
+	public void setUp() {
+		// stub for testing the undo and redo functions
 		initial.add(new Task("Meeting"));
 		initial.add(new Task("SEP"));
 		initial.add(new Task("Movie with john"));
-		expected.add(new Task("Meeting"));
-		expected.add(new Task("SEP"));
-		expected.add(new Task("Movie with john"));
+		initialArchived.add(new Task("Meeting tmr"));
+		initialArchived.add(new Task("SEP done"));
+		initialArchived.add(new Task("Movie with john yes"));
+		initialSearch.add(new Task("Meeting"));
 	}
 
-```
-###### logic\UndoRedoOpTest.java
-``` java
 	@After
 	public void tearDown() {
-		// expected.clear();
-		// assertEquals("all content deleted from a.txt",
-		// TextBuddy.executeCommand("clear"));
-		// assertEquals(0, TextBuddy.getLineCount());
+		initial.clear();
+		initialArchived.clear();
+		initialSearch.clear();
 	}
 
-```
-###### logic\UndoRedoOpTest.java
-``` java
+	/**
+	 * Test for undo function
+	 */
 	@Test
 	public void undoTest() {
 
-		UndoRedoOp op = new UndoRedoOp(initial);
+		UndoRedoOp op = UndoRedoOp.getInstance();
+
+		op.addStateToUndo(initial, initialArchived, initialSearch);
 
 		ArrayList<Task> status1 = new ArrayList<Task>();
+		ArrayList<Task> status1A = new ArrayList<Task>();
+		ArrayList<Task> status1S = new ArrayList<Task>();
+		ArrayList<Task> status2 = new ArrayList<Task>();
+		ArrayList<Task> status2A = new ArrayList<Task>();
+		ArrayList<Task> status2S = new ArrayList<Task>();
+
 		status1.add(new Task("Meeting"));
 		status1.add(new Task("SEP"));
 		status1.add(new Task("Movie with john"));
-		status1.add(new Task("Dinner with bf"));
-		expected.add(new Task("Dinner with bf"));
+		status1.add(new Task("Dinner with Tom"));
 
-		for(int i = 0; i < 4; i++){
-			assertEquals(expected.get(i).getName(), op.addStateToUndo(status1).get(i).getName());
+		status1A.add(new Task("Meeting tmr"));
+		status1A.add(new Task("SEP done"));
+		status1A.add(new Task("Movie with john yes"));
+		status1A.add(new Task("Dinner with Tom"));
+
+		status1S.add(new Task("Meeting"));
+		status1S.add(new Task("Internship"));
+
+		status2.add(new Task("Meeting"));
+		status2.add(new Task("SEP"));
+		status2.add(new Task("Movie with john"));
+		status2.add(new Task("Dinner with Tom"));
+		status2.add(new Task("Party"));
+
+		status2A.add(new Task("Meeting tmr"));
+		status2A.add(new Task("SEP done"));
+		status2A.add(new Task("Movie with john yes"));
+		status2A.add(new Task("Dinner with Tom"));
+		status2A.add(new Task("Party"));
+
+		status2S.add(new Task("Meeting"));
+		status2S.add(new Task("Internship"));
+		status2S.add(new Task("Family Dinner"));
+
+		ArrayList<ArrayList<Task>> statusOne = new ArrayList<ArrayList<Task>>(
+				op.addStateToUndo(status1, status1A, status1S));
+		assertEquals(3, statusOne.size());
+
+		for (int i = 0; i < 4; i++) {
+			assertEquals(status1.get(i).getName(), (statusOne.get(0).get(i)).getName());
+			assertEquals(status1A.get(i).getName(), (statusOne.get(1).get(i)).getName());
 		}
 
-		expected.remove(3);
-		
-		for(int i = 0; i < 3; i++){
-			assertEquals(expected.get(i).getName(), op.undo().get(i).getName());
+		for (int i = 0; i < 2; i++) {
+			assertEquals(status1S.get(i).getName(), (statusOne.get(2).get(i)).getName());
 		}
-		
+
+		ArrayList<ArrayList<Task>> statusTwo = new ArrayList<ArrayList<Task>>(
+				op.addStateToUndo(status2, status2A, status2S));
+		assertEquals(3, statusTwo.size());
+
+		for (int i = 0; i < 5; i++) {
+			assertEquals(status2.get(i).getName(), (statusTwo.get(0).get(i)).getName());
+			assertEquals(status2A.get(i).getName(), (statusTwo.get(1).get(i)).getName());
+		}
+
+		for (int i = 0; i < 3; i++) {
+			assertEquals(status2S.get(i).getName(), (statusTwo.get(2).get(i)).getName());
+		}
+
+		ArrayList<ArrayList<Task>> statusThree = op.undo();
+		assertEquals(3, statusThree.size());
+
+		for (int i = 0; i < 4; i++) {
+			assertEquals(status1.get(i).getName(), statusThree.get(0).get(i).getName());
+			assertEquals(status1A.get(i).getName(), statusThree.get(1).get(i).getName());
+		}
+
+		for (int i = 0; i < 2; i++) {
+			assertEquals(status1S.get(i).getName(), (statusOne.get(2).get(i)).getName());
+		}
+
+		ArrayList<ArrayList<Task>> statusFour = op.undo();
+		assertEquals(3, statusFour.size());
+
+		for (int i = 0; i < 3; i++) {
+			assertEquals(initial.get(i).getName(), statusFour.get(0).get(i).getName());
+			assertEquals(initialArchived.get(i).getName(), statusFour.get(1).get(i).getName());
+		}
+
+		for (int i = 0; i < 1; i++) {
+			assertEquals(initialSearch.get(i).getName(), statusFour.get(2).get(i).getName());
+		}
 	}
-	
-```
-###### logic\UndoRedoOpTest.java
-``` java
+
+	/**
+	 * Test for redo function
+	 */
 	@Test
 	public void redoTest() {
-		UndoRedoOp op = new UndoRedoOp(initial);
+		UndoRedoOp op = UndoRedoOp.getInstance();
+
+		op.addStateToUndo(initial, initialArchived, initialSearch);
 
 		ArrayList<Task> status1 = new ArrayList<Task>();
+		ArrayList<Task> status1A = new ArrayList<Task>();
+		ArrayList<Task> status1S = new ArrayList<Task>();
+		ArrayList<Task> status2 = new ArrayList<Task>();
+		ArrayList<Task> status2A = new ArrayList<Task>();
+		ArrayList<Task> status2S = new ArrayList<Task>();
+
 		status1.add(new Task("Meeting"));
 		status1.add(new Task("SEP"));
 		status1.add(new Task("Movie with john"));
-		status1.add(new Task("Dinner with bf"));
-		expected.add(new Task("Dinner with bf"));
+		status1.add(new Task("Dinner with Tom"));
 
-		for(int i = 0; i < 4; i++){
-			assertEquals(expected.get(i).getName(), op.addStateToUndo(status1).get(i).getName());
+		status1A.add(new Task("Meeting tmr"));
+		status1A.add(new Task("SEP done"));
+		status1A.add(new Task("Movie with john yes"));
+		status1A.add(new Task("Dinner with Tom haha"));
+
+		status1S.add(new Task("Meeting"));
+		status1S.add(new Task("Internship"));
+
+		status2.add(new Task("Meeting"));
+		status2.add(new Task("SEP"));
+		status2.add(new Task("Movie with john"));
+		status2.add(new Task("Dinner with Tom"));
+		status2.add(new Task("Party"));
+
+		status2A.add(new Task("Meeting tmr"));
+		status2A.add(new Task("SEP done"));
+		status2A.add(new Task("Movie with john yes"));
+		status2A.add(new Task("Dinner with Tom"));
+		status2A.add(new Task("Party"));
+
+		status2S.add(new Task("Meeting"));
+		status2S.add(new Task("Internship"));
+		status2S.add(new Task("Family Dinner"));
+
+		ArrayList<ArrayList<Task>> statusOne = op.addStateToUndo(status1, status1A, status1S);
+
+		for (int i = 0; i < 4; i++) {
+			assertEquals(status1.get(i).getName(), statusOne.get(0).get(i).getName());
+			assertEquals(status1A.get(i).getName(), statusOne.get(1).get(i).getName());
 		}
 
-		expected.remove(3);
-		
-		for(int i = 0; i < 3; i++){
-			assertEquals(expected.get(i).getName(), op.undo().get(i).getName());
+		for (int i = 0; i < 2; i++) {
+			assertEquals(status1S.get(i).getName(), statusOne.get(2).get(i).getName());
+		}
+
+		ArrayList<ArrayList<Task>> statusTwo = op.addStateToUndo(status2, status2A, status2S);
+
+		for (int i = 0; i < 5; i++) {
+			assertEquals(status2.get(i).getName(), statusTwo.get(0).get(i).getName());
+			assertEquals(status2A.get(i).getName(), statusTwo.get(1).get(i).getName());
+		}
+
+		for (int i = 0; i < 3; i++) {
+			assertEquals(status2S.get(i).getName(), statusTwo.get(2).get(i).getName());
+		}
+
+		ArrayList<ArrayList<Task>> statusThree = op.undo();
+		assertEquals(3, statusThree.size());
+
+		for (int i = 0; i < 4; i++) {
+			assertEquals(status1.get(i).getName(), statusThree.get(0).get(i).getName());
+			assertEquals(status1A.get(i).getName(), statusThree.get(1).get(i).getName());
+		}
+
+		for (int i = 0; i < 2; i++) {
+			assertEquals(status1S.get(i).getName(), statusThree.get(2).get(i).getName());
+		}
+
+		ArrayList<ArrayList<Task>> statusFour = op.redo();
+		assertEquals(3, statusFour.size());
+
+		for (int i = 0; i < 5; i++) {
+			assertEquals(status2.get(i).getName(), statusFour.get(0).get(i).getName());
+			assertEquals(status2A.get(i).getName(), statusFour.get(1).get(i).getName());
+		}
+
+		for (int i = 0; i < 3; i++) {
+			assertEquals(status2S.get(i).getName(), statusTwo.get(2).get(i).getName());
+		}
+
+		ArrayList<ArrayList<Task>> statusFive = op.undo();
+		assertEquals(3, statusFive.size());
+
+		for (int i = 0; i < 4; i++) {
+			assertEquals(status1.get(i).getName(), statusFive.get(0).get(i).getName());
+			assertEquals(status1A.get(i).getName(), statusFive.get(1).get(i).getName());
+		}
+
+		for (int i = 0; i < 2; i++) {
+			assertEquals(status1S.get(i).getName(), statusThree.get(2).get(i).getName());
 		}
 		
-		expected.add(new Task("Dinner with bf"));
+		ArrayList<ArrayList<Task>> statusSix = op.undo();
+		assertEquals(3, statusSix.size());
+
+		for (int i = 0; i < 3; i++) {
+			assertEquals(initial.get(i).getName(), statusSix.get(0).get(i).getName());
+			assertEquals(initialArchived.get(i).getName(), statusSix.get(1).get(i).getName());
+		}
+
+		for (int i = 0; i < 1; i++) {
+			assertEquals(initialSearch.get(i).getName(), statusFour.get(2).get(i).getName());
+		}
 		
-		for(int i = 0; i < 4; i++){
-			assertEquals(expected.get(i).getName(), op.redo().get(i).getName());
+		ArrayList<ArrayList<Task>> statusSeven = op.redo();
+		assertEquals(3, statusSeven.size());
+
+		for (int i = 0; i < 4; i++) {
+			assertEquals(status1.get(i).getName(), statusSeven.get(0).get(i).getName());
+			assertEquals(status1A.get(i).getName(), statusSeven.get(1).get(i).getName());
+		}
+
+		for (int i = 0; i < 2; i++) {
+			assertEquals(status1S.get(i).getName(), statusThree.get(2).get(i).getName());
+		}
+		
+		ArrayList<ArrayList<Task>> statusEight = op.redo();
+		assertEquals(3, statusEight.size());
+
+		for (int i = 0; i < 5; i++) {
+			assertEquals(status2.get(i).getName(), statusEight.get(0).get(i).getName());
+			assertEquals(status2A.get(i).getName(), statusEight.get(1).get(i).getName());
+		}
+		
+		for (int i = 0; i < 3; i++) {
+			assertEquals(status2S.get(i).getName(), statusTwo.get(2).get(i).getName());
 		}
 	}
-
 }
 ```
